--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </p>
   </form>
 
-  <form id="Limpiar" method="get" action="/"> <button class="bottom2" type="submit">
+  <form id="Limpiar" method="get" action="/fibonacci"> <button class="bottom2" type="submit">
       Limpiar<br />
     </button>
   </form>
